0029949: Draw Harness - simplify vtriangle command implementation

vtriangle and vsegment commands now share presentation created by vdrawparray command.

Added missing accessors to Graphic3d_ArrayOfPrimitives properties
VertexNumberAllocated(), EdgeNumberAllocated() and BoundNumberAllocated().